# rushcut

./: .gitignore  NEXT.md  README.md  SETUP.md  pyproject.toml
docs/demo/: README.md  cut_report.md  description.md  seo.md  social.md  subtitles.srt  titles.md
docs/superpowers/plans/: 2026-07-16-rushcut-pipeline.md
docs/superpowers/specs/: 2026-07-16-rushcut-pipeline-design.md
skills/rushcut/: SKILL.md
templates/: channel.md  cover-style.md  hotwords.json  settings.json
tests/: make_fixture.py  test_pipeline.py  test_units.py
ytp/: cli.py  config.py  cut.py  judge.py  pack.py  run.py  shorts.py  silence.py  transcribe.py
