[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rushcut"
version = "0.1.0"
description = "毛片 → YouTube 上架包:順剪、字幕、標題、描述、Shorts 一條龍 CLI,判斷交給 Claude"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "林亞澤 (Yaze Lin)" }]
dependencies = [
    "faster-whisper>=1.0",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
dev = ["edge-tts>=6.1", "pytest>=8"]

[project.scripts]
ytp = "ytp.cli:main"

[tool.setuptools]
packages = ["ytp"]
